fix(production): address round-three backend review